# cognisync---adaptive-learning-middleware

./: .editorconfig  .gitignore  401_FIX_FINAL.md  AUTHENTICATION_FIX.md  App.tsx  CAB_PROFILE_DESIGN.md  DEPLOYMENT_GUIDE.md  DESIGN_SYSTEM.md  FIX_PROGRESS.md  FIX_REPORT.md  Makefile  PERSONALIZATION_PLAN.md  PROJECT_SUMMARY.md  README.md  STARTUP_GUIDE.md  SYSTEM_COMPLETION_STATUS.md  SYSTEM_ISSUES_AND_FIXES.md  SYSTEM_STATUS.md  constants.ts  deploy.sh  docker-compose.yml  index.html  package.json  restart-backend.sh  start-all.sh  status.sh  stop-all.sh  test-auth-flow.sh  test-registration-flow.md
backend/: .env.example  .eslintrc.json  .gitignore  ALEMBIC_GUIDE.md  Dockerfile  Dockerfile.dev  MIGRATION_GUIDE.md  README.md  docker-compose.yml  jest.config.js  main.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.sh  test-admin.sh  tsconfig.json
backend/alembic/: env.py
backend/app/api/: admin_router.py  (+2 more)
backend/scripts/: check_neo4j.py  demo_conversation.py  init_db.py  seed_graph.py  seed_scale_templates.py  test_analyzer.py  test_crud.py  test_deepseek.py
backend/tests/: conftest.py  health.test.ts  test_admin_emotion_analytics.py  test_admin_emotion_compare_api.py  test_admin_emotion_experiment_api.py  test_admin_endpoints.py  test_api_endpoints.py  test_chat_emotion_log_contract.py  test_emotion_coding.py  test_emotion_compare_mapping.py  test_emotion_compare_service.py  test_emotion_dataset_service.py  test_emotion_experiment_service.py  test_emotion_log_service.py  test_onboarding_endpoints.py  test_text_analyzer.py
(+402 files in other folders)
